[package]
name = "rustybfd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
etherparse = "0.14"
bytemuck = { version = "1.14", features = ["derive"] }
md-5 = "0.10"
sha1 = "0.10"
derivative = "2.2"
strum = "0.26"
strum_macros = "0.26"
bitflags = "2.4"
nix = { version = "0.28", features = ["socket"] }
rand = "0.8"

# tokio-util = { version = "0.7", features = ["codec","net"] }
# tokio-stream = { version = "0.1", features = ["net"] }

# byteorder = "1.3"
bytes = "1.0"


[dev-dependencies]
insta = { version = "1.23" }
